--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
     {% for news in news %}
-        <h1>{{ news.title }}</h1>
-        <p>Von {{ news.author }} am {{ news.date_posted }}</p>
-        <p>{{ news.content }}</p>
+    <article class="media content-section">
+        <div class="media-body">
+          <div class="article-metadata">
+            <a class="mr-2" href="#">{{ news.author }}</a>
+            <small class="text-muted">{{ news.date_posted }}</small>
+          </div>
+          <h2><a class="article-title" href="#">{{ news.title }}</a></h2>
+          <p class="article-content">{{ news.content }}</p>
+        </div>
+      </article>
     {% endfor %}
 {% endblock content %}
