Login und Registrtions Seite in Arbeit

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="/">News-Feed</a>
-                <a class="nav-item nav-link" href="/eller">Eller</a>
+                <a class="nav-item nav-link" href="/about">About</a>
               </div>
               <!-- Navbar Right Side -->
-              <!--<div class="navbar-nav">
+              <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/login">Login</a>
                 <a class="nav-item nav-link" href="/register">Register</a>
-              </div>-->
+              </div>
             </div>
           </div>
         </nav>
